# NewtonChatbot

./: .gitignore  .gitpod.dockerfile  .gitpod.woz.py  .gitpod.woz_chat_instance.json  .gitpod.yml  .prettierignore  README.md  RELEASE.md  package-lock.json  package.json  pyproject.toml  setup.py  tsconfig.json  webpack.config.js  woz.md
.github/workflows/: build.yml  check-release.yml
experiments/woz/: task1.ipynb  task2.ipynb  task3.ipynb
newtonchat/: __init__.py  handlers.py
newtonchat/bots/: chatgpt.py  chatgpt_config.json  dummy.py  gpt.py
newtonchat/bots/newton/: newton.py
newtonchat/comm/: __init__.py  chat_instance.py  kernelcomm.py  message.py
newtonchat/loader/: __init__.py
schema/: plugin.json
src/: chatinstance.ts  index.ts  mainchat.ts  stores.ts
src/common/: chatbotInterfaces.ts  messages.ts
src/components/: ExtraChatPanel.svelte  Main.svelte  SveltePanelView.ts
src/components/chat/: AutoCompleteInput.svelte  BottomChat.svelte  Chat.svelte  ChatInput.svelte  WizardChat.svelte
src/components/chat/message/: FeedbackButtons.svelte  FeedbackForm.svelte  Message.svelte  MessageBottom.svelte  MessageParts.svelte  Profile.svelte  Reply.svelte  ReplyButtons.svelte
src/components/chat/message/message_parts/: Code.svelte  Form.svelte  FullOptions.svelte  Hypertext.svelte  Markdown.svelte  Metadata.svelte  Options.svelte  Panel.svelte  Text.svelte  TextInput.svelte
src/components/chat/message/message_parts/form_elements/: FormCheck.svelte  FormSelection.svelte  FormText.svelte
src/components/generic/: CodeWidget.svelte  IconButton.svelte  RadioButton.svelte  ToggleButton.svelte
src/components/header/: Header.svelte  InstanceForm.svelte
src/components/icons/: innercell.svelte
src/dataAPI/: NotebookCommModel.ts
